# Faceless-Vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/eye/: haarcascade_eye.xml
src/camera/: CameraUtils.cpp  CameraUtils.h
src/detector/: Detector.cpp  Detector.h
src/model/: ModelUtils.cpp  ModelUtils.h
src/types/: Eye.h  Face.h
src/utils/: Constants.h  Helpers.h
